--- a/index.html
+++ b/index.html
@@ -41,12 +41,24 @@
         <div class="login__input username">
           <i class="fas fa-user icon"></i>
           <label for="username" class="label__username">Username</label>
-          <input type="text" class="input__username" />
+          <input
+            type="text"
+            class="input__username"
+            id="username"
+            required
+            name="username"
+          />
         </div>
         <div class="login__input password">
           <i class="fas fa-key icon"></i>
           <label for="password" class="label__password">Password</label>
-          <input type="password" class="input__password" />
+          <input
+            type="password"
+            class="input__password"
+            id="password"
+            required
+            name="password"
+          />
         </div>
         <a href="#" class="login__link">Forgot Password?</a>
         <button type="submit" class="login__btn" value="LOGIN">LOGIN</button>
